updates with new nav

--- a/perforce/index.html
+++ b/perforce/index.html
@@ -33,55 +33,68 @@
 						<div id="menu">
 							<ul>
 								<li><a href="../">Home</a></li>
+								<li><a href="http://erchsm.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
+								<li><a href="#">Contact</a></li>						
+
+								<li><a href="../wrap/">Wrap Media</a></li>
 								<li><a href=".">Perforce</a></li>
 								<li><a href="../givjoy/">GivJoy</a></li>
-								<li><a href="../google-design/">Google Design</a></li>
 								<li><a href="../scholastic/">Scholastic</a></li>
 								<li><a href="../cisco/">Cisco</a></li>
 								<li><a href="https://github.com/erchsm/M-E">M&E</a></li>
 								<li><a href="https://github.com/erchsm/box-app/blob/gh-pages/README.md">Box</a></li>
-								<li><a href="http://erchsm.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
-								<li><a href="#">Contact</a></li>						</ul>
-							</div>
-						</li>
-					</ul>
-				</nav>
-			</header>
+							</ul>
+						</div>
+					</li>
+				</ul>
+			</nav>
+		</header>
 
-			<!-- Main -->
-			<article id="main">
-				<header class="style8">
-					<h2>Helix Sync<span class="x">&times;</span>Perforce</h2>
+		<!-- Main -->
+		<article id="main">
+			<header class="style8">
+				<h2>Helix Sync<span class="x">&times;</span>Perforce</h2>
 <!-- 							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
 -->					</header>
+
 <section class="wrapper style5">
 	<div class="inner">
+
 		
 		<div class="row">
 			<div class="7u 12u(medium)">
 				<h4>Helix Sync</h4>
-				<p>In my position at Perforce as a UX Designer my employment was structured in such a way that design & research were conducted in 1-month product rotations.
+				<p>In my position at Perforce as a UX Designer my employment was structured in such a way that design & research were conducted in 1-month product rotations. My first project rotation involved working on an early stage product called Helix Sync. My first task was to create a concept prototype for the product to elicit early feedback from our users. Using task analysis with the prototype and user interviews we were able to get some early insight on the direction of our product.
 				</p>
-				<p>My first project rotation involved working on an early stage product called Helix Sync. My first task was to create a concept prototype for the product to elicit early feedback from our users. Using task analysis with the prototype and user interviews we were able to get some early insight on the direction of our product.
-				</p>
+
+			</div>
+			<div class="5u 12u$(medium)">
 				<h4>my role</h4>
 				<p>My main role on this project involved creating the visual designs and prototype. In the user research phase I worked closely with another designer to help schedule and facilitate most of the sessions. I also led group synthesis sessions at the end of the project.
 				</p>
-			</div>
-			<div class="5u 12u$(medium)">
-				<h4>The Problem</h4>
-				<!-- <span class="image right "><img src="images/perforce-logo.jpg" alt=""/></span> -->
-				<p><a href="https://perforce.com">Perforce</a> has been a leader in the version control industry since they premiered their <a href="https://www.youtube.com/watch?v=_yQlKEq-Ueg">centralized</a> versioning engine in 1995.
-				</p>
-				<p>Since the arrival of <a href="https://en.wikipedia.org/wiki/Distributed_revision_control">DVCS</a> versioning tools, most notably Git and Github, Perforce has struggled to stay relevant to their users. Recently they have found their niche by appealing to the game development community. 
-				</p>
+				
 			</div>
 		</div>
+	</div>
+</section>
+<section id="cta" class="wrapper style9">
+	<div class="inner">
+		<div class="7u 12u(medium)">
+			<h2>The prototype we made!</h2>
+			<p>Send me an email &horbar; Oh and here's my resume!</p>
+		</div>
+		<ul class="actions vertical">
+			<li><a href="https://erchsm.github.io/helix-sync" class="button ">Concept Prototype</a></li>
+			<!-- <li><a href="https://github.com/erchsm/helix-sync/raw/gh-pages/test-script.pdf" class="button">Test Script</a></li> -->
+			<li><a href="Helix Sync Research & Synthesis.pdf" class="button">A Presentation to our PM's</a></li>
+		</ul>
+	</div>
+</section>
+<section class="wrapper style5">
+	<div class="inner">
 		<div class="row">
-			<div class="12u 12u$(medium)">
+			<div class="7u 12u(medium)">
 				<h4>our target users</h4>
-			</div>
-			<div class="6u 12u(medium)">
 				<p>
 					We saw an opportunity within the game development industry to create a product for <b>"Technical-minded" Game Designers/Artists</b>.
 				</p>
@@ -91,8 +104,16 @@
 					<li>Version their assets in a way that <b>fits their mental model</b> and <b>integrates with their current tools.</b></li> 
 				</ol>
 			</div>
-			<div class="6u$ 12u$(medium)">
-				<span class="image fit"><img src="images/user-groups.svg" alt=""/></span>
+			<div class="5u 12u(medium)">
+				<h4>The Problem</h4>
+				<!-- <span class="image right "><img src="images/perforce-logo.jpg" alt=""/></span> -->
+				<p><a href="https://perforce.com">Perforce</a> has been a leader in the version control industry since they premiered their <a href="https://www.youtube.com/watch?v=_yQlKEq-Ueg">centralized</a> versioning engine in 1995.
+				</p>
+				<p>Since the arrival of <a href="https://en.wikipedia.org/wiki/Distributed_revision_control">DVCS</a> versioning tools, most notably Git and Github, Perforce has struggled to stay relevant to their users. Recently they have found their niche by appealing to the game development community. 
+				</p>
+			</div>
+			<div class="12u$ 12u$(medium)">
+				<!-- <span class="image fit"><img src="images/user-groups.svg" alt=""/></span> -->
 
 			</div>
 
@@ -212,28 +233,29 @@
 		</ul>
 	</div>
 </section> -->
-</article>
-
 <!-- Footer -->
 <footer id="footer">
 	<p>NEXT CASE STUDY</p>
 
 	<ul class="icons">
 
-			<a class="icon" href="../givjoy">
-				<span class="icon button">Givjoy X Protohack
-					<span class="icon small fa-angle-right"></span>
-				</a>
-			</ul>
+		<a class="icon" href="../givjoy">
+			<span class="icon button">Givjoy X Protohack
+				<span class="icon small fa-angle-right"></span>
+			</a>
+		</ul>
 
-</footer>
-<footer id="footer" class="alt">
+	</footer>
+	<footer id="footer" class="alt">
 		<ul class="icons small">
 			<li><a href="https://codepen.io/erchsm" class="icon fa-codepen"><span class="label">Codepen</span></a></li>
 			<li><a href="https://github.com/erchsm" class="icon fa-github"><span class="label">Github</span></a></li>
 			<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
 		</ul>
 	</footer>
+
+</article>
+
 
 </div>
 
