--- a/cisco/index.html
+++ b/cisco/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-	<script src="../js/sha256.js" type="text/javascript"></script>
+	<!-- <script src="../js/sha256.js" type="text/javascript"></script> -->
 
 	<header id="header" class="alt">
 		<h1><a href="index.html"></a></h1>
