--- a/perforce/index.html
+++ b/perforce/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-	<script src="../js/sha256.js" type="text/javascript"></script> 
+	<!-- <script src="../js/sha256.js" type="text/javascript"></script>  -->
 
 	<!-- Page Wrapper -->
 	<div id="page-wrapper">
