--- a/wrap/index.html
+++ b/wrap/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-	<script src="../js/sha256.js" type="text/javascript"></script>
+	<!-- <script src="../js/sha256.js" type="text/javascript"></script> -->
 
 
 	<!-- Page Wrapper -->
