--- a/index.html
+++ b/index.html
@@ -20,13 +20,21 @@
 <body class="landing">
 
 	<!-- Header -->
-		<header id="header" class="alt">
-			<h1><a href="/"></a></h1>
-			<nav id="nav">
-				<ul>
-					<li class="special">
-						<a href="#" class="menuToggle"><span></span></a>
-						<div id="menu">
+	<header id="header" class="alt">
+		<h1><a href="/"></a></h1>
+		<nav id="nav">
+			<ul>
+				<li class="special">
+					<a href="#" class="menuToggle"><span></span></a>
+					<div id="menu">
+							<!-- <div class="content">
+								<h1>
+									Hi. I'm Eric Smith, a UI/UX Designer and Developer in the SF Bay Area.
+								</h1>
+								<p>
+									Hi. I'm Eric Smith, a UI/UX Designer and Developer in the SF Bay Area.
+								</p>
+							</div> -->
 							<ul>
 								<li><a href=".">Home</a></li>
 								<li><a href="http://erchsm.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
@@ -47,13 +55,13 @@
 			</nav>
 		</header>
 
-	<!-- Page Wrapper -->
-	<div id="page-wrapper">
+		<!-- Page Wrapper -->
+		<div id="page-wrapper">
 
-		
 
-		<!-- Banner -->
-		<section  id="banner">
+
+			<!-- Banner -->
+			<section  id="banner">
 				<div class="inner">
 					<h2>Eric S.<br/>UI <span class="x">&times;</span> UX</h2>
 					<p></p>
@@ -61,30 +69,30 @@
 				<div class="trigger"></div>
 
 				<!-- <a href="/#one" class="more scrolly">Learn More</a> -->
-		</section> 
+			</section> 
 
-		<!-- One -->
-		<section id="one" class="wrapper style5 special">
-			<div class="inner">
-				<header class="major">
-					<h2>Hi there. I'm Eric!</h2>
-					<p>
-						I'm a UX Designer and UI Engineer located in the SF Bay Area. I've coded this site with my own two hands as a way to showcase my work. Below you'll find some case studies I've worked on. For more code samples check out my github. When im not designing or coding I'm either taking photos and/or out enjoying some nature.
-					</p>
-					<p>
-						For me UX is the perfect intersection of Computer Science, Customer Service and Creative Thinking. My background in engineering and design allows me to act a bridge in communication for both designers & engineers. My experience working in a cooperative has also given me skills to excel in any team environment.
-					</p>
-				</header>
-			</div>
-		</section>
+			<!-- One -->
+			<section id="one" class="wrapper style5 special">
+				<div class="inner">
+					<header class="major">
+					<h2>Hi there. I'm Eric, a UX Designer and UI Engineer located in the SF Bay Area. </h2>
+						<p>
+							I've coded this site with my own two hands as a way to showcase my work. Below you'll find some case studies I've worked on. For more code samples check out my github. When im not designing or coding I'm either taking photos and/or out enjoying some nature.
+						</p>
+						<!-- <p>
+							For me UX is the perfect intersection of Computer Science, Customer Service and Creative Thinking. My background in engineering and design allows me to act a bridge in communication for both designers & engineers. My experience working in a cooperative has also given me skills to excel in any team environment.
+						</p> -->
+					</header>
+				</div>
+			</section>
 
-		<!-- Two -->
-		<section id="two" class="wrapper style5 alt">
-			<!-- <div class="inner"> -->
+			<!-- Two -->
+			<section id="two" class="wrapper style5 alt">
+				<!-- <div class="inner"> -->
 				<section class="spotlight style-wrap">
 					<!-- <div class="image"><img src="wrap/images/case-study-image.png" alt=""/></div> -->
 					<div class="content">
-						<h2>UI/UX Design — Wrap Templates</h2>
+						<h2>UI/UX Design —<br /> Wrap Templates</h2>
 						<p>On this project I was tasked with creating template mobile web experiences “aka. Wraps” on the Wrap platform. Templates gave our users a starting point in our platform and provided them some inspiration to create their own wraps.</p>
 						<ul class="actions">
 							<li><a href="wrap/" class="button fit">Learn More</a></li>
@@ -94,7 +102,7 @@
 				<section class="spotlight style-perforce">
 					<!-- <div class="image"><img src="perforce/images/case-study-image.png" alt=""/></div> -->
 					<div class="content">
-						<h2>UX Design —
+						<h2>UX Design —<br />
 							Helix Product Suite</h2>
 							<p>The Helix product suite is a collection of projects that I worked on at Perforce. The goal of these projects was to create version control tools for the less technical user.</p>
 							<!-- My goals for this project we're to increase accessibility -->
@@ -114,52 +122,62 @@
 								</ul>
 							</div>
 						</section>
-
-						<section class="spotlight style-scholastic">
-							<!-- <div class="image"><img src="scholastic/images/Eric/case-study-image.png" alt=""/></div> -->
+						<section class="spotlight style-cisco">
+							<!-- <div class="image"><img src="cisco/images/case-study-image.png" alt="" /></div> -->
 							<div class="content">
-								<h2>UX Strategy —<br />
-									Scholastic</h2>
-									<p>My team and I were asked to take advantage of digital technology to encourage children to read books outside of school. We came up with two features that could be seamlessly integrated into Scholastic's existing website.</p>
+								<h2>UI Engineering —
+									Cisco</h2>
+									<p>My second position at Cisco involved creating web UI using HTML, CSS & Javascript. In my first role I created API documentation to assist developers in using out product.</p>
 									<ul class="actions">
-										<li><a href="scholastic/" class="button fit">Learn More</a></li>
+										<li><a href="cisco/" class="button fit">Learn More</a></li>
 									</ul>
 								</div>
 							</section>
-							<section class="spotlight style-cisco">
-								<!-- <div class="image"><img src="cisco/images/case-study-image.png" alt="" /></div> -->
+							<section class="spotlight style-scholastic">
+								<!-- <div class="image"><img src="scholastic/images/Eric/case-study-image.png" alt=""/></div> -->
 								<div class="content">
-									<h2>UI Engineering —
-										Cisco</h2>
-										<p>My second position at Cisco involved creating web UI using HTML, CSS & Javascript. In my first role I created API documentation to assist developers in using out product.</p>
+									<h2>UX Strategy —<br />
+										Scholastic</h2>
+										<p>My team and I were asked to take advantage of digital technology to encourage children to read books outside of school. We came up with two features that could be seamlessly integrated into Scholastic's existing website.</p>
 										<ul class="actions">
-											<li><a href="cisco/" class="button fit">Learn More</a></li>
+											<li><a href="scholastic/" class="button fit">Learn More</a></li>
 										</ul>
 									</div>
 								</section>
-								<section class="spotlight style-meet-eat">
-									<!-- <div class="image"> -->
-									<!-- <img src="https://raw.githubusercontent.com/erchsm/M-E/master/screenshots/case-study-image.png" alt="" /></div> -->
+								<section class="spotlight style-cisco">
+									<!-- <div class="image"><img src="cisco/images/case-study-image.png" alt="" /></div> -->
 									<div class="content">
-									<h2>Mobile Design — M&E</h2>
-									<p>Meet and Eat(M&E) is an app designed to allow users to organize meet-ups with friends to get a bite to eat. Our target audience was college students. The application allows users to plan meetups using scales such as time, date and location preferences.</p>
-									<ul class="actions">
-										<li><a href="https://github.com/erchsm/M-E/blob/master/README.md" class="button fit">Learn More</a></li>
-									</ul>
-								</div>    
-							</section>
-							<section class="spotlight style-box">
-								<!-- <div class="image"><img src="box/images/case-study-image.png" alt="" /></div> -->
-								<div class="content">
-									<h2>Chrome Extension — Box Secure Sharing</h2>
-									<p>This Chrome Extension is designed for two Box users to securely transfer files. This was an exercise in using the Box API and crafting a experience that allows the users feel secure in transfering their files.</p>
-									<ul class="actions">
-										<li><a href="box/" class="button fit">Learn More</a></li>
-									</ul>
-								</div>
-							</section>
-						<!-- </div> -->
-					</section>
+										<h2>UI Engineering —
+											Cisco</h2>
+											<p>My second position at Cisco involved creating web UI using HTML, CSS & Javascript. In my first role I created API documentation to assist developers in using out product.</p>
+											<ul class="actions">
+												<li><a href="cisco/" class="button fit">Learn More</a></li>
+											</ul>
+										</div>
+									</section>
+									<section class="spotlight style-meet-eat">
+										<!-- <div class="image"> -->
+										<!-- <img src="https://raw.githubusercontent.com/erchsm/M-E/master/screenshots/case-study-image.png" alt="" /></div> -->
+										<div class="content">
+											<h2>Mobile Design — M&E</h2>
+											<p>Meet and Eat(M&E) is an app designed to allow users to organize meet-ups with friends to get a bite to eat. Our target audience was college students. The application allows users to plan meetups using scales such as time, date and location preferences.</p>
+											<ul class="actions">
+												<li><a href="https://github.com/erchsm/M-E/blob/master/README.md" class="button fit">Learn More</a></li>
+											</ul>
+										</div>    
+									</section>
+									<section class="spotlight style-box">
+										<!-- <div class="image"><img src="box/images/case-study-image.png" alt="" /></div> -->
+										<div class="content">
+											<h2>Chrome Extension — Box Secure Sharing</h2>
+											<p>This Chrome Extension is designed for two Box users to securely transfer files. This was an exercise in using the Box API and crafting a experience that allows the users feel secure in transfering their files.</p>
+											<ul class="actions">
+												<li><a href="box/" class="button fit">Learn More</a></li>
+											</ul>
+										</div>
+									</section>
+									<!-- </div> -->
+								</section>
 
 					<!-- 		<section class="spotlight style-google">
 			<div class="image"><img src="google-design/images/case-study-image.png" alt="" /></div>
@@ -173,39 +191,39 @@
 			</div>
 		</section> -->
 
-					<!-- CTA -->
-					<section id="cta" class="wrapper style4">
-						<div class="inner">
-							<header>
-								<h2>I'd love to hear from you!</h2>
-								<p>Send me an email &horbar; Oh and here's my resume!</p>
-							</header>
-							<ul class="actions vertical">
-								<li><a href="http://erchsm.github.io/me/resume/ericsmith-resume.pdf" class="button fit">My Resume</a></li>
-								<li><a href="#" class="button fit">Email Me</a></li>
-							</ul>
-						</div>
-					</section>
+		<!-- CTA -->
+		<section id="cta" class="wrapper style4">
+			<div class="inner">
+				<header>
+					<h2>I'd love to hear from you!</h2>
+					<p>Send me an email &horbar; Oh and here's my resume!</p>
+				</header>
+				<ul class="actions vertical">
+					<li><a href="http://erchsm.github.io/me/resume/ericsmith-resume.pdf" class="button fit">My Resume</a></li>
+					<li><a href="#" class="button fit">Email Me</a></li>
+				</ul>
+			</div>
+		</section>
 
-					<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="https://codepen.io/erchsm" class="icon fa-codepen"><span class="label">Codepen</span></a></li>
-							<li><a href="https://github.com/erchsm" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
-						</ul>
-					</footer>
+		<!-- Footer -->
+		<footer id="footer">
+			<ul class="icons">
+				<li><a href="https://codepen.io/erchsm" class="icon fa-codepen"><span class="label">Codepen</span></a></li>
+				<li><a href="https://github.com/erchsm" class="icon fa-github"><span class="label">Github</span></a></li>
+				<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
+			</ul>
+		</footer>
 
-				</div>
+	</div>
 
-				<!-- Scripts -->
-				<script src="js/jquery.min.js"></script>
-				<script src="js/jquery.scrollex.min.js"></script>
-				<script src="js/jquery.scrolly.min.js"></script>
-				<script src="js/skel.min.js"></script>
-				<script src="js/init.js"></script>
-				<!-- <script src="../node_modules/retina.js/src/retina.js"></script> -->
+	<!-- Scripts -->
+	<script src="js/jquery.min.js"></script>
+	<script src="js/jquery.scrollex.min.js"></script>
+	<script src="js/jquery.scrolly.min.js"></script>
+	<script src="js/skel.min.js"></script>
+	<script src="js/init.js"></script>
+	<!-- <script src="../node_modules/retina.js/src/retina.js"></script> -->
 
 
-			</body>
-			</html>
+</body>
+</html>
