--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<section id="one" class="wrapper style5 special">
 				<div class="inner">
 					<header class="major">
-					<h2>Hi there. I'm Eric, a UX Designer and UI Engineer located in the SF Bay Area. </h2>
+					<h2>Hi there. I'm Eric, a UX Designer and UI Engineer located in New York City. </h2>
 						<p>
 							I've coded this site with my own two hands as a way to showcase my work. Below you'll find some case studies I've worked on. For more code samples check out my github. When im not designing or coding I'm either taking photos and/or out enjoying some nature.
 						</p>
