--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<ul>
 								<li><a href=".">Home</a></li>
 								<li><a href="http://erchsm.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
-								<li><a href="#">Contact</a></li>
+								<li><a href="mailto:hi@ericsmithux.com?Subject=Hello%21&amp;Body=Was%20looking%20at%20your%20website%20and%20wanted%20to%20say%20hello%21">Contact</a></li>
 								<!-- <li>Case Studies</li> -->
 								<li><a href="wrap/">Wrap Media</a></li>
 								<li><a href="perforce/">Perforce</a></li>
